# shitfest

./: CMakeLists.txt  LICENSE.md  README.md
client/: CMakeLists.txt
include/sf/: cluster.hpp  identity.hpp  message.hpp  user.hpp
lib/: CMakeLists.txt  message.cpp
server/: CMakeLists.txt  main.cpp
